--- a/Example/TuyaSmartPlanter-ObjC.xcodeproj/xcshareddata/xcschemes/TuyaSmartPlanter-ObjC-Example.xcscheme
+++ b/Example/TuyaSmartPlanter-ObjC.xcodeproj/xcshareddata/xcschemes/TuyaSmartPlanter-ObjC-Example.xcscheme
@@ -92,6 +92,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "TuyaSmartPlanter-ObjC"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
